jboot v3.1.7:
新增：JWT 可以通过 request para 传入数据的支持
修复：复写 ActionHandler.getAction 可能无效的问题



jboot v3.1.6:
新增：JbootReturnValueRender，用于可以在 Action 里进行返回值渲染
新增：ResponseEntity，可以直接在 Action 返回其进行渲染
优化：对 JbootGatewayConfig 网关配置进行优化，用户配置了错误的 uri 时会给出提示
优化：升级 Dubbo、Motan、Sentinel、Nacos 等到最新版本
优化：ClassScanner 添加一些常用的排除 jar 和 class
优化：更多关于 Nacos 分布式配置中心的配置支持
修复：RPCUtils.copyFields()  无法正确复制配置内容的问题
修复：JbootRpcApplication 无法正确启动插件和拦截器的问题
文档：修改 AOP 文档的内容错误问题
文档：完善分布式配置中心对 Nacos 以及 Apollo 支持的相关文档



jboot v3.1.5:
新增：新增 Motan RPC 的 export 和 host 的相关配置以及test代码
新增：JbootJson 支持驼峰式 JsonKey 输出，感谢Gitee的 @herowjun
新增：新增 Controller 对返回值自动渲染的功能
新增：JbootRPCConfig 新增默认 version 和 group 配置的支持
优化：ClassScanner 添加无需扫码的 jar 排除，速度更快
修复：ClassScanner 在 Windows 平台下可能存在重复扫码而拖慢启动速度的问题
修复：门户网关 GatewayHttpProxy 在 POST 时的某些情况下会出现无法正确代理的问题
文档：完善 RPC 配置的相关文档
文档：完善 Gateway 配置的相关文档
文档：添加 fatjar 打包的相关文档
文档：完善 fatjar 部署运行的相关文档



jboot v3.1.4:
优化：重构 ClassScanner ，提高在 fatjar 模式的扫描性能
优化：重构 ConfigManager ，以便更好的支持 fatjar 模式下的配置文件读取
优化：重构 JbootCoreConfig，方便在 fatjar 下能够准确读取 html 等资源文件
优化：重构 JbootCoreConfig，把 JFinal-Weixin 设置非必须依赖



jboot v3.1.3:
新增：新增对 JDK11+ 的支持



jboot v3.1.1:
新增：Gateway 网关自定义拦截器的支持，方便通过网关进行鉴权等操作
新增：Gateway 网关新增错误重试次数的配置，方便网关重试配置
新增：jboot.properties 配置里的 value 值添加 ${para} 参数的支持
新增：undertow 端口配置，添加 -1 的支持，通过 -1 配置可用的随机端口
新增：JbootRpcApplication，方便用于只启动 RPC Service 服务，用于给消费者提供服务
修复：修复 @RPCInject 在拦截器使用的时候出错的问题
修复：RPC 工具类 Utils.appendAnnotation 无法正确给 int 、boolean 参数赋值的问题
优化：当不对 Dubbo 的 qos 配置的时候，设置为默认关闭，方便单机情况下进行开发调试
文档：更新 Gateway 网关的相关文档



jboot v3.1.0:
新增：新增网关的支持，路由规则支持 host、path、query等 三种模式，同时支持基于 Sentinel 的限流配置
新增：新增对 Dubbo 多协议、多注册中心等的支持
新增：新增对注解 @Configuration 的支持，可以通过其构建 name 实例
新增：JbootAopInterceptor 可以动态的添加或者移除拦截器
新增：配置文件可以配置 Map、Set、List 和 数组的支持
新增：JbootCache 新增可以获取素有 Names 的功能，方便对缓存进行运维
新增：JbootCache 新增可以对分布式缓存进行刷新，方便对缓存进行运维
新增：jboot-system.properties 的支持，用于替代启动参数的 -D，使用第三方组件的时候更加方便
修复：修复 JbootHttpImpl 无法上传文件的bug
修复：修复 JbootHttpImpl 无法正确获取 gzip 压缩内容的问题
优化：重构 RPC 的模块，使之更加简单清晰