@@ -6,7 +6,7 @@
 
     <groupId>io.jboot</groupId>
     <artifactId>jboot</artifactId>
-    <version>3.1.7-SNAPSHOT</version>
+    <version>3.1.7</version>
     <packaging>jar</packaging>
 
     <name>jboot</name>
@@ -42,7 +42,7 @@
 
     <properties>
         <jfinal.version>4.8</jfinal.version>
-        <jfinal-cos.version>2019.8</jfinal-cos.version>
+        <jfinal-cos.version>2020.4</jfinal-cos.version>
         <jfinal-undertow.version>2.0</jfinal-undertow.version>
         <jfinal-weixin.version>2.5</jfinal-weixin.version>
         <cglib.version>3.3.0</cglib.version>
@@ -70,7 +70,7 @@
         <resteasy.version>3.11.0.Final</resteasy.version>
         <seata.version>1.1.0</seata.version>
         <motan.version>1.1.8</motan.version>
-        <metrics.version>4.1.5</metrics.version>
+        <metrics.version>4.1.6</metrics.version>
 
         <jdk.version>1.8</jdk.version>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -231,7 +231,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.1.21</version>
+            <version>1.1.22</version>
             <scope>provided</scope>
         </dependency>
 
@@ -366,7 +366,7 @@
         <dependency>
             <groupId>com.aliyun.openservices</groupId>
             <artifactId>ons-client</artifactId>
-            <version>1.8.4.Final</version>
+            <version>1.8.5.Final</version>
             <scope>provided</scope>
         </dependency>
 
